adding FAQ + tools

--- a/trainhackers.html
+++ b/trainhackers.html
@@ -67,10 +67,7 @@
                         <a class="page-scroll" href="#apis">APIs</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#apis">Other tools</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#prizes">Prizes</a>
+                        <a class="page-scroll" href="#tools">Other tools</a>
                     </li>
                     <li style="width: 150px; position: relative;">
                       <a href="http://bloomberg.com/RD">
@@ -266,6 +263,96 @@
                   <br />
                   <br />
                 </h2>
+            </div>
+        </div>
+    </div>
+</section>
+
+<h1 class="section-title">
+    APIs
+</h1>
+<section class="faqSection fluid-container">
+    <div class="">
+
+        <div id="apis">
+            <div class="content-area">
+                <p>
+                  <strong>
+                    <a href="http://www.bloomberglabs.com/api/">Bloomberg API</a>
+                  </strong>
+                </p>
+                <p>
+                The Bloomberg API (BLPAPI) is a set of freely available    <a title="API Libraries" href="http://www.bloomberglabs.com/api/libraries/">software development kits</a> (SDKs) that allow software developers to create
+                    applications that consume market data. The BLPAPI interface powers global market data distribution to desktops, workgroups and enterprise applications and
+                    is used daily by more than 100,000 Bloomberg customers.
+                </p>
+                <p>
+                This API is part of Bloomberg’s Open Market Data Initiative, which is focused on creating open standards for market data, covering    <a title="Symbology" href="http://www.bloomberglabs.com/symbology/">symbology</a>, programming interfaces, data schemas, and eventually, protocols.
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+<h1 class="section-title">
+    Business Tools
+</h1>
+<section class="faqSection fluid-container">
+    <div class="">
+
+        <div id="tools">
+            <div class="content-area">
+                <p>
+                  <strong>
+                    <a href="https://docs.google.com/spreadsheet/ccc?key=0AvSZUaMMxrAodFVfT3F0d2o1M3lRNWFHbHRXSnJVcVE#gid=0">Business Model Canvas</a>
+                  </strong>
+                </p>
+                <p>
+                There is no way you can build a startup without a lean canvas. Here is a great google docs version you can use. <b>Make sure you download it to use it on the move.</b>
+                </p>
+                <br>
+                <br>
+                <p>
+                  <strong>
+                    <a href="http://trello.com">Trello</a>
+                  </strong>
+                </p>
+                <p>
+                Manage your todos online</b>
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+<h1 class="section-title">
+    Developer tools
+</h1>
+<section class="faqSection fluid-container">
+    <div class="">
+
+        <div id="tools">
+            <div class="content-area">
+                <p>
+                  <strong>
+                    <a href="https://ngrok.com/">ngrok</a>
+                  </strong>
+                </p>
+                <p>
+                Create a tunnel to your localhost. You will love this if you haven't heard of it!</b>
+                </p>
+                <br>
+                <br>
+                <p>
+                  <strong>
+                    <a href="http://trello.com">Trello</a>
+                  </strong>
+                </p>
+                <p>
+                Manage your todos online</b>
+                </p>
             </div>
         </div>
     </div>
