--- a/trainhackers.html
+++ b/trainhackers.html
@@ -282,6 +282,9 @@
                   </strong>
                 </p>
                 <p>
+                    In order to use the Bloomberg API, everyone should receive an email with instructions on how to set it up.
+                </p>
+                <p>
                 The Bloomberg API (BLPAPI) is a set of freely available    <a title="API Libraries" href="http://www.bloomberglabs.com/api/libraries/">software development kits</a> (SDKs) that allow software developers to create
                     applications that consume market data. The BLPAPI interface powers global market data distribution to desktops, workgroups and enterprise applications and
                     is used daily by more than 100,000 Bloomberg customers.
