--- a/trainhackers.html
+++ b/trainhackers.html
@@ -119,9 +119,11 @@
                 </p><br>
                 <p>
                     <b>
-                        Does the idea have to be train related?
+                        Does my idea have to be related to a specific domain?
                     </b><br>
-                    If your idea is not related to trains it would still be valid, however, ideally we want ideas to at least be focused around transport and travel. You will be in the perfect environment to analyze the problems with rail transport system and what’s better we have some of the key stakeholders in charge of the UK rail network ready to listen to your ideas!
+                    You can pitch any idea you can think of - you will be in the perfect environment to analyze the problems related to rail transport system and what’s better we have some of the key stakeholders in charge of the UK rail network ready to listen to your ideas, but if your idea is not train related it will still be valid.
+                    <br>
+                    <b>What is crucial is that we don't want to hear insane, disruptive ideas. You're jumping aboard a hackathon on a train, you might as well make this journey as worth as possible"
                 </p><br>
                 <p>
                     <b>
