--- a/trainhackers.html
+++ b/trainhackers.html
@@ -115,16 +115,18 @@
                     <b>
                         Do I need an idea before the event?
                     </b><br>
-                    It is not required to have an idea, but it is recommended to do some brainstorming before the event. You’ll be working with extremely brilliant individuals, and we will have some awesome talks at the start of the event to inspire you and get the creativity flowing. But that said, if you happen to have an fantastic idea already, we can’t wait to hear it on the day.
+                    It is not a requirement, and certainly not everyone at the event will pitch, but we do encourage you to pitch. We recommended doing some brainstorming before the event. You’ll be surrounded by extremely brilliant individuals, and we will have some awesome talks at the start of the event to inspire you and get the creativity flowing - if there is a chance for you to make your dream come true it's now!
+                    <br>
+                    <b>You don't want to be 10 years down the line thinking, "Ah, I should've pitch my idea at the HackTrain..." - do you? ;)
                 </p><br>
                 <p>
                     <b>
-                        Does my idea have to be related to a specific domain?
+                        Does my idea have to be related to a specific domain? (i.e. trains?)
                     </b><br>
-                    You can pitch any idea you can think of - you will be in the perfect environment to analyze the problems related to rail transport system and what’s better we have some of the key stakeholders in charge of the UK rail network ready to listen to your ideas, but if your idea is not train related it will still be valid.
+                    You can pitch any idea you have in your mind - it does not have to be of a specific domain to be taken into account. However, you will be in the perfect environment to analyze the problems related to rail transport system and what’s better, key stakeholders in charge of the UK rail network will be present ready to validate such ideas.
                     <br>
-                    <b>What is crucial is that we don't want to hear insane, disruptive ideas. You're jumping aboard a hackathon on a train, you might as well make this journey as worth as possible"
-                </p><br>
+                    <b>The most important thing</b> is that you pitch disruptive, innovative ideas. Boring apps to gather all your starbucks coupons, are for normal hackathons - train hackathons deserve the most insane ideas!
+                </p><br> 
                 <p>
                     <b>
                         Can I work on something I've already been working on?
