addded fix for link

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                         </a>
                     </div>
                     <div class="col-sm-6 img-container">
-                        <a  style="width: 100%;" href="http://www.virgintrainseastcost.co.uk/">
+                        <a  style="width: 100%;" href="http://www.virgintrainseastcoast.com/">
                             <img style="width: 70%;" src="img/index/logo-VTEC.png"/>
                         </a>
                     </div>
@@ -232,7 +232,7 @@
                     </a>
                 </div>
                 <div class="col-sm-6 img-container">
-                    <a  style="width: 100%;" href="http://www.virgintrainseastcost.co.uk/">
+                    <a  style="width: 100%;" href="http://www.virgintrainseastcoast.com/">
                         <img style="width: 70%;" src="img/index/logo-VTEC.png"/>
                     </a>
                 </div>
