added more data

--- a/manual.html
+++ b/manual.html
@@ -64,6 +64,9 @@
                         <a class="page-scroll" href="#judging">Judging</a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="#prizes">Prizes</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#apis">APIs</a>
                     </li>
                     <li>
@@ -117,7 +120,7 @@
                     </b><br>
                     It is not a requirement, and certainly not everyone at the event will pitch, but we do encourage you to pitch. We recommended doing some brainstorming before the event. You’ll be surrounded by extremely brilliant individuals, and we will have some awesome talks at the start of the event to inspire you and get the creativity flowing - if there is a chance for you to make your dream come true it's now!
                     <br>
-                    <b>You don't want to be 10 years down the line thinking, "Ah, I should've pitch my idea at the HackTrain..." - do you? ;)
+                    <b>You don't want to be 10 years down the line thinking, "Ah, I should've pitch my idea at the HackTrain..." - do you?</b>
                 </p><br>
                 <p>
                     <b>
@@ -273,6 +276,129 @@
 </section>
 
 <h1 class="section-title">
+    Prizes
+</h1>
+<section class="faqSection fluid-container">
+    <div class="">
+        <div id="prizes">
+            <div class="content-area">
+                <p>
+                  <strong>
+                    <h1 class="prize-title">1st</h1>
+                  </strong>
+                </p>
+                <ul>
+                  <li>
+                    <a href="https://seoul.globalhackathon.io/">Fully paid trip to Korea to the GHS</a>
+                  </li>
+                  <li>
+                    <a href="http://www.parrot.com/uk/products/">4 Bloomberg Parrot Drones</a>
+                  </li>
+                  <li>
+                    <a href="http://www.parrot.com/uk/products/">Invitation to exclusive railway event.</a>
+                  </li>
+                  <li>
+                    <a href="http://www.parrot.com/uk/products/">GitHub Plans</a>
+                  </li>
+                </ul>
+            </div>
+
+            <div class="content-area">
+                <p>
+                  <strong>
+                    <h1 class="prize-title">2nd</h1>
+                  </strong>
+                </p>
+                <ul>
+                  <li>
+                    <a href="http://eu.minidrive.bynifty.com/">4 Nifty Drives</a>
+                  </li>
+                  <li>
+                    <a href="http://www.parrot.com/uk/products/">Bloomberg Parrot Drones</a>
+                  </li>
+                  <li>
+                    <a href="">Invitation to exclusive railway event.</a>
+                  </li>
+                </ul>
+            </div>
+
+            <div class="content-area">
+                <p>
+                  <strong>
+                    <h1 class="prize-title">3rd</h1>
+                  </strong>
+                </p>
+                <ul>
+                  <li>
+                    Railway Swag
+                  </li>
+                <ul>
+            </div>
+
+            <div class="content-area">
+                <p>
+                  <strong>
+                    <h1 class="subprize-title">HashtagBattle</h1>
+                    <h4 class="subprize-subtitle">Awarded to the TrainHacker that tweets the most using the hashtag #HackTheRails</h4>
+                  </strong>
+                </p>
+                <ul>
+                  <li>
+                    One year supply of waffles + WaffleMaker
+                  </li>
+                  <li>
+                    Mini-quadcopter
+                  </li>
+                  <li>
+                    HackTrain Swag
+                  </li>
+                </ul>
+            </div>
+
+            <div class="content-area">
+                <p>
+                  <strong>
+                    <h1 class="subprize-title">Creative Tweet</h1>
+                    <h4 class="subprize-subtitle">Awarded to the person that tweets the most creative picture to @BloombergCareers</h4>
+                  </strong>
+                </p>
+                <ul>
+                  <li>
+                    <a href="http://www.parrot.com/uk/products/">3Doodler</a>
+                  </li>
+                </ul>
+            </div>
+
+            <div class="content-area">
+                <p>
+                  <strong>
+                    <h1 class="subprize-title">Best Developer</h1>
+                  </strong>
+                </p>
+                <ul>
+                  <li>
+                    <a href="http://www.parrot.com/uk/products/">Bloomberg Parrot Drone</a>
+                  </li>
+                </ul>
+            </div>
+
+            <div class="content-area">
+                <p>
+                  <strong>
+                    <h1 class="subprize-title">Best Hustler</h1>
+                  </strong>
+                </p>
+                <ul>
+                  <li>
+                    Railway Swag
+                  </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</section>
+
+<h1 class="section-title">
     APIs
 </h1>
 <section class="faqSection fluid-container">
@@ -282,21 +408,77 @@
             <div class="content-area">
                 <p>
                   <strong>
-                    <a href="http://www.bloomberglabs.com/api/">Bloomberg API</a>
+                    <h1><a href="https://github.com/bloomberg/blpapi-http/blob/develop/doc/http-api-guide.md">Bloomberg API</a></h1>
                   </strong>
                 </p>
                 <p>
-                    In order to use the Bloomberg API, everyone should receive an email with instructions on how to set it up.
+                  The <a href="https://github.com/bloomberg/blpapi-http/blob/develop/doc/http-api-guide.md">Bloomberg HTTP API interface</a> was an HTTP interface developed to provide access to Bloomberg data during hackathons. The Bloomberg API has been used throughout <a href="http://challengepost.com/software/search?query=bloomberg">tenths of hackathons</a>. This API interface will allow all TrainHackers to access the <a title="API Libraries" href="http://www.bloomberglabs.com/api/"> Bloomberg API</a> through HTTP and WebSockets.
                 </p>
+              </br>
                 <p>
-                The Bloomberg API (BLPAPI) is a set of freely available    <a title="API Libraries" href="http://www.bloomberglabs.com/api/libraries/">software development kits</a> (SDKs) that allow software developers to create
-                    applications that consume market data. The BLPAPI interface powers global market data distribution to desktops, workgroups and enterprise applications and
-                    is used daily by more than 100,000 Bloomberg customers.
+                In a nutshell, the Bloomberg API (BLPAPI) is a set of freely available    <a title="API Libraries" href="http://www.bloomberglabs.com/api/libraries/">software development kits</a> (SDKs) that allow software developers to create applications that consume market data. With this API you will be able to receive <b>historical data</b> and <b> reference data</b>
                 </p>
+              </br>
+              <p>
+                You will be able to find all the documentation at the <a href="https://github.com/bloomberg/blpapi-http/blob/develop/doc/http-api-guide.md">Bloomberg HTTP API page</a>. You can also check all the other projects listed under the <a href="https://github.com/bloomberg">Bloomberg Github.</a>
+              </p>
                 <p>
-                This API is part of Bloomberg’s Open Market Data Initiative, which is focused on creating open standards for market data, covering    <a title="Symbology" href="http://www.bloomberglabs.com/symbology/">symbology</a>, programming interfaces, data schemas, and eventually, protocols.
+                  This weekend, your fellow Bloomberg mentors, <a href="mailito:jmisiorny@bloomberg.net">Jakub Misiorny</a> and <a href="mailito:dpatulescu1@bloomberg.net">Radu Patulescu</a> will travel along with you to help you in any problems you face - so feel free to reach out to them throughout the journey!
                 </p>
+                <br>
+                <p>
+                    Prior to the event, all TrainHackers will receive an email with the credentials required to be able to use the Bloomberg Financial API.
+                </p>
+              </br>
             </div>
+
+
+            <div class="content-area">
+              <p><strong>
+                <h1><a href="https://datafeeds.networkrail.co.uk/ntrod/login">Network Rail and Open Data</strong></a></h1>
+              </p>
+              <p>We are committed to becoming more transparent - so we&rsquo;re working to make relevant data and information more accessible to both rail users and other stakeholders.&nbsp; That&rsquo;s one of the reasons we&rsquo;re so pleased to be involved in Hacktrain.&nbsp;&nbsp;</p>
+              <p><strong>&nbsp;</strong></p>
+              <p>We have a number of operational data feeds available, but we&rsquo;d like your help in realising the value of the data.&nbsp; And we want&nbsp;to encourage the development of new products of interest to those who use the railway.</p>
+              <p>&nbsp;</p>
+              <p>The feeds available randge include schedules, movement, train positioning, speed, etc. To use these feeds you&rsquo;ll need to create an account with us by visiting <a href="https://datafeeds.networkrail.co.uk/ntrod/login">https://datafeeds.networkrail.co.uk/ntrod/login</a>&nbsp;&nbsp;</p>
+              <!-- <ul>
+              <li><em><strong>SCHEDULE</strong></em>&nbsp;- daily extracts and updates of train schedules from the Integrated Train Planning System, in CIF and JSON formats</li>
+              <li><em><strong>MOVEMENT</strong></em>&nbsp;- train positioning and movement event data</li>
+              <li><em><strong>TD</strong></em>&nbsp;- train positioning data at signalling berth level</li>
+              <li><em><strong>TSR</strong></em>&nbsp;<em><strong>(Temporary Speed Restrictions)</strong></em>&nbsp;&ndash; details of temporary reductions in permissible speed across the rail network</li>
+              <li><em><strong>VSTP</strong></em>&nbsp;<em><strong>(Very Short Term Plan)</strong></em>&nbsp;&ndash; train schedules created via the VSTP process which are not available via the SCHEDULE feed</li>
+              <li><em><strong>RTPPM</strong></em>&nbsp;<em><strong>(Real-Time Public Performance Measure)</strong></em>&nbsp;- performance of trains against the timetable, measured as the percentage of trains arriving at their destination on-time</li>
+              <li><em><strong>SMART</strong></em>&nbsp;- train describer berth offset data used for train reporting</li>
+              <li><em><strong>Corpus</strong></em>&nbsp;- location reference data</li>
+              <li><em><strong>BPLAN</strong></em>&nbsp;- train planning data, including locations and sectional running times</li>
+              </ul> -->
+              <p><br />For examples of how the data has been used already or to read more about our wider approach to transparency please visit our webpages<a href="http://www.networkrail.co.uk/transparency/">http://www.networkrail.co.uk/transparency/</a>&nbsp; If you&rsquo;d like more regular updates via twitter you can also follow Mark Farrow, Head of Transparency &amp; Ethics @farrow_mark</p>
+        </div>
+
+
+        <div class="content-area">
+            <p>
+              <strong>
+                <h1><a href="http://nrodwiki.rockshore.net/index.php/Darwin:Push_Port">ATOC's DARWIN</a></h1>
+              </strong>
+            </p>
+            <p>
+            The Darwin Push Port is an XML push feed that continuously streams information about the creation of, and changes to, train schedule records, together with train running predictions made by Darwin.
+          </p>
+          <br>
+          <p>
+            You will be able to access a few extracts of DARWIN at the following <a href="https://www.dropbox.com/sh/e5ah5cnnv9wdr8e/AAChq0z7agKiwHVtAwV7qDjNa?dl=0">Dropbox link.</a> The file named “RTTIHistoryECV” is a 2 week extract from the East Coast route.  The other files are short, unfiltered 1 day extracts from the Darwin Push Port.
+          </p>
+          <br>
+          <p>
+            The Push Port can be filtered to a specific area of interest by TIPLOC, or to provide information for the entire country. Either way, the information delivered is complex and must be properly interpreted before presentation to end users.
+          </p>
+          <br>
+          <p>
+            The Push Port requires the user to build a database capable of capturing extremely high volumes of information, as well as a query engine to draw the information from your database. There is a large amount of interpretation work involved in this; however this allows substantial flexibility to apply the information to any product within the limitations of your own infrastructure.
+          </p>
+          </br>
         </div>
     </div>
 </section>
