--- a/index.html
+++ b/index.html
@@ -96,6 +96,11 @@
                     <li>
                         <a class="page-scroll" href="#prizes">Prizes</a>
                     </li>
+                    <li>
+                        <a href="mailito:river@hacktrain.com" class="btn btn-info">
+                          Contact Us
+                        </a>
+                      </li>
                     <li style="width: 150px; position: relative;">
                       <a href="http://bloomberg.com/RD">
                         <img style="margin: auto auto; width: 100%; position: absolute; margin-top: -10px" class="img-responsive" src="img/index/bloomberg-logo-powered.png"/>
@@ -118,7 +123,12 @@
                     <div class="col-md-8 col-md-offset-2">
                         <img class="light" style="width: 70%; padding-top:80px" src="img/index/hacktrain-logo-white-dates.png"/>
                         <br><br><br>
-                        <p class="intro-text">40 hackers, 4 cities - 3 days to build revolutionary startups, whilst hacking on a train!</p>
+                        <p class="intro-text">40 hackers, 4 cities, 200km/h - 3 days to build revolutionary startups, whilst hacking on a train!</p>
+                        <br>
+                            <a href="mailito:river@hacktrain.com" class="btn btn-default btn-lg"> <span class="network-name">Contact Us</span></a>
+                            <br>
+
+                            <br>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
