--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <h3 id="myModalLabel">We'd Love to Hear From You</h3>
       </div>
       <div class="modal-body">
-        <form action="MAILTO:axsauze@gmail.com" method="post" enctype="text/plain" class="form-horizontal col-sm-12">
+        <form action="MAILTO:river@hacktrain.com" method="post" enctype="text/plain" class="form-horizontal col-sm-12">
           <div class="form-group"><label>Name</label><input class="form-control required" placeholder="Your name" data-placement="top" name="name" data-trigger="manual" data-content="Must be at least 3 characters long, and must only contain letters." type="text"></div>
           <div class="form-group"><label>E-Mail</label><input name="mail" class="form-control email" placeholder="email@you.com (so that we can contact you)" data-placement="top" data-trigger="manual" data-content="Must be a valid e-mail address (user@gmail.com)" type="text"></div>
           <div class="form-group"><label>Message</label><textarea name="comment" class="form-control" placeholder="Your message here.." data-placement="top" data-trigger="manual"></textarea></div>
