--- a/manual.html
+++ b/manual.html
@@ -298,7 +298,10 @@
                     <a href="http://www.parrot.com/uk/products/">Invitation to exclusive railway event.</a>
                   </li>
                   <li>
-                    <a href="http://www.parrot.com/uk/products/">GitHub Plans</a>
+                    <a href="http://www.parrot.com/uk/products/">Mentoring at Bloomberg HQ.</a>
+                  </li>
+                  <li>
+                    <a href="http://www.github.com/">GitHub Plans</a>
                   </li>
                 </ul>
             </div>
@@ -314,7 +317,7 @@
                     <a href="http://eu.minidrive.bynifty.com/">4 Nifty Drives</a>
                   </li>
                   <li>
-                    <a href="http://www.parrot.com/uk/products/">Bloomberg Parrot Drones</a>
+                    <a href="http://www.github.com/">Github Plans</a>
                   </li>
                   <li>
                     <a href="">Invitation to exclusive railway event.</a>
