--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
                         <a class="page-scroll" href="#trainhackers">TrainHackers</a>
                     </li>-->
                     <li>
-                        <a class="page-scroll" href="#journey">Journey</a>
+                        <a class="page-scroll" href="#prizes">Prizes</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#prizes">Prizes</a>
+                        <a class="page-scroll" href="#journey">2015 Journey</a>
                     </li>
                     <li>
                         <a data-toggle="modal" href="#myModal" role="button" class="btn btn-info">
@@ -385,353 +385,6 @@
         </div>
     </section> -->
 
-    <section id="journey" class="container content-section text-center">
-        <div class="row">
-            <div class="col-lg-10 col-lg-offset-1">
-               <h1>THE JOURNEY</h1>
-               <!-- <h4>To be announced in:</h4>
-                <div class="clock" style="margin: auto auto;width: 650px"></div> -->
-            </div>
-        </div>
-    </section>
-
-    <div class="container col-lg-10 col-lg-offset-1">
-        <div id="timeline" class="timeline-container">
-            <button id="upper-timeline-toggle" class="timeline-toggle">+ expand all</button>
-
-            <br class="clear">
-
-            <div class="timeline-wrapper">
-                <h2 class="timeline-time"><span>27th March - The Launch +</span></h2>
-                <dl class="timeline-series">
-                    <span class="tick tick-before"></span>
-                    <dt id="1-1" class="timeline-event"><a>16:45 - Registration & Dinner+</a></dt>
-                    <span class="tick tick-after"></span>
-                    <dd class="timeline-event-content" id="1-1EX">
-                        <div class="media">
-                            <img class="journey-img" src="img/index/journey-launch2.jpg" />
-                        </div>
-
-                        <blockquote>
-                            <p>The journey will begin with a massive launch event in London - Top players from the London tech and startup ecosystem, great speakers and incredible surprises. Even if you will not participate in the HackTrain, this is an event you do not want to miss!</p>
-                        </blockquote>
-
-                    <br class="clear">
-                    </dd>
-                </dl>
-
-                <dl class="timeline-series">
-                    <span class="tick tick-before"></span>
-                    <dt id="1-2" class="timeline-event"><a>17:20 - Event Starts +</a></dt>
-                    <span class="tick tick-after"></span>
-                    <dd class="timeline-event-content" id="1-2EX">
-                        <div class="media">
-                            <img class="journey-img" src="img/index/journey-trainpitch.jpg" />
-                        </div>
-                        <blockquote>
-                            <p>The HackTrain hackathon will officially kick-off!</p>
-                        </blockquote>
-                        <blockquote>
-                            <p>We'll have talks from some of our amazing sponsors, high-profile keynote speakers and a welcome speech by the organisers!</p>
-                        </blockquote>
-
-                    <br class="clear">
-                    </dd>
-                </dl>
-
-                <dl class="timeline-series">
-                    <span class="tick tick-before"></span>
-                    <dt id="1-2" class="timeline-event"><a>17:40 - API Demos, Challenges, Keynote Speakers & Media Enagement +</a></dt>
-                    <span class="tick tick-after"></span>
-                    <dd class="timeline-event-content" id="1-2EX">
-                        <div class="media">
-                            <img class="journey-img" src="img/index/journey-trainpitch.jpg" />
-                        </div>
-                        <blockquote>
-                            <p>There will be an opportunity for interviews, pictures and networking with the Hackers, designers and entrepreneurs before they hop on the HackTrain. Challenges for the hackathon will also be set along with demos of APIs and data sets available</p>
-                        </blockquote>
-
-                    <br class="clear">
-                    </dd>
-                </dl>
-
-                <dl class="timeline-series">
-                    <span class="tick tick-before"></span>
-                    <dt id="1-2" class="timeline-event"><a>19:55 - All aboard the HackTrain! +</a></dt>
-                    <span class="tick tick-after"></span>
-                    <dd class="timeline-event-content" id="1-2EX">
-                        <div class="media">
-                            <img class="journey-img" src="img/index/journey-trainpitch.jpg" />
-                        </div>
-                        <blockquote>
-                            <p>The TrainHackers will hop on the train and will have an opportunity to pitch their epic ideas whilst on the road to Sheffield to one of the top coworking spaces in the UK. Team formation workshops will take place, and by the time we arrive to Sheffield, everyone will be ready to ROCK!</p>
-                        </blockquote>
-
-                    <br class="clear">
-                    </dd>
-                </dl>
-
-                <dl class="timeline-series">
-                    <span class="tick tick-before"></span>
-                    <dt id="1-3" class="timeline-event"><a>22:00 - Arrival at Sheffield +</a></dt>
-                    <span class="tick tick-after"></span>
-                    <dd class="timeline-event-content" id="1-3EX">
-                        <div class="media">
-                            <img class="journey-img" src="img/index/journey-launch.jpg" />
-                        </div>
-
-                        <blockquote>
-                            <p>Amazing speakers and incredible mentors will receive all the TrainHackers at Sheffield with open arms. Teams will receive a few crash-courses and mini-workshops on things that will be essential to aid success throughout the rest of the event, and even throughout their entrepreneurial career!</p>
-                        </blockquote>
-
-                    <br class="clear">
-                    </dd>
-                </dl>
-
-                <dl class="timeline-series">
-                    <span class="tick tick-before"></span>
-                    <dt id="1-4" class="timeline-event"><a>23:00+ - Late night surprises +</a></dt>
-                    <span class="tick tick-after"></span>
-                    <dd class="timeline-event-content" id="1-4EX">
-                        <div class="media">
-                            <img class="journey-img" src="img/index/journey-hackathon.jpg" />
-                        </div>
-
-                        <blockquote>
-                            <p>OWe have loads of surprises planned for the whole journey at the train hackathon! You will not want to miss any of these!</p>
-                        </blockquote>
-
-                    <br class="clear">
-                    </dd>
-                </dl>
-
-                <dl class="timeline-series">
-                    <span class="tick tick-before"></span>
-                    <dt id="1-6" class="timeline-event"><a>00:00 - Sleep Time at a hotel +</a></dt>
-                    <span class="tick tick-after"></span>
-                    <dd class="timeline-event-content" id="1-6EX">
-                        <div class="media">
-                            <img class="journey-img" src="img/index/journey-surprise.jpg" />
-                        </div>
-
-                        <blockquote>
-                            <p>Chance to recuperate your energy in preparation for the 36 hours ahead!</p>
-                        </blockquote>
-
-                    <br class="clear">
-                    </dd>
-                </dl>
-            </div>
-
-
-            <div class="timeline-wrapper">
-                <h2 class="timeline-time"><span>28th March - All on board the HackTrain +</span></h2>
-                <dl class="timeline-series">
-                    <span class="tick tick-before"></span>
-
-                <dl class="timeline-series">
-                    <span class="tick tick-before"></span>
-                    <dt id="2-1" class="timeline-event"><a>09:00 - HackTrain to York +</a></dt>
-                    <span class="tick tick-after"></span>
-                    <dd class="timeline-event-content" id="2-1EX">
-                        <div class="media">
-                            <img class="journey-img" src="img/index/journey-train.jpg" />
-                        </div>
-
-                        <blockquote>
-                            <p>TrainHackers will be jump in the Hacktrain to head to the beautiful city of York! Like always, we will have a few surprises and mentors on board to maximize the short journey!</p>
-                        </blockquote>
-
-                    <br class="clear">
-                    </dd>
-                </dl>
-
-                <dl class="timeline-series">
-                    <span class="tick tick-before"></span>
-                    <dt id="2-2" class="timeline-event"><a>13:00 - Tech Workshops +</a></dt>
-                    <span class="tick tick-after"></span>
-                    <dd class="timeline-event-content" id="2-2EX">
-                        <div class="media">
-                            <img class="journey-img" src="img/index/journey-tech.jpg" />
-                        </div>
-
-                        <blockquote>
-                            <p>We will be making sure that only the best technology is available for all the TrainHackers at the journey! Wearable gadgets like Google Glass, Oculus Rift, between many others will be available, and any extra equipment you might require can certainly be requested - we'll do our best to get everything you need to rock this event!</p>
-                        </blockquote>
-
-                    <br class="clear">
-                    </dd>
-                </dl>
-
-                <dl class="timeline-series">
-                    <span class="tick tick-before"></span>
-                    <dt id="2-2" class="timeline-event"><a>15:00 - Hacking at the Museum +</a></dt>
-                    <span class="tick tick-after"></span>
-                    <dd class="timeline-event-content" id="2-2EX">
-                        <div class="media">
-                            <img class="journey-img" src="img/index/journey-oldtrain.jpg" />
-                        </div>
-
-                        <blockquote>
-                            <p>If you think this just can't get any more epic, the National Transport museum has allowed us to host our hackathon inside their premises! TrainHackers will be building software inside the most prestigious historical trains! How cool is that!</p>
-                        </blockquote>
-
-                    <br class="clear">
-                    </dd>
-                </dl>
-
-                <dl class="timeline-series">
-                    <span class="tick tick-before"></span>
-                    <dt id="2-2" class="timeline-event"><a>17:35 - HackTrain to Edinburgh +</a></dt>
-                    <span class="tick tick-after"></span>
-                    <dd class="timeline-event-content" id="2-2EX">
-                        <div class="media">
-                            <img class="journey-img" src="img/index/journey-journey.jpg" />
-                        </div>
-
-                        <blockquote>
-                            <p>Everyone will hop on board the HackTrain once again on the road to Edinburgh to one of the best coworking spaces in the city! Upon arrival, mentors will be ready to help out in anything required!</p>
-                        </blockquote>
-
-                    <br class="clear">
-                    </dd>
-                </dl>
-
-
-                <dl class="timeline-series">
-                    <span class="tick tick-before"></span>
-                    <dt id="2-2" class="timeline-event"><a>20:15 - Arrive in Edinburgh! +</a></dt>
-                    <span class="tick tick-after"></span>
-                    <dd class="timeline-event-content" id="2-2EX">
-                        <div class="media">
-                            <img class="journey-img" src="img/index/journey-redbull.jpg" />
-                        </div>
-
-                        <blockquote>
-                            <p>We will have food and drinks once we arrive at Edinburgh! Teams will be able to stay up all night working on their products! More surprises will be available for the hackers to make it through the last night! It will be an amazing, exhausting and rewarding adventure!</p>
-                        </blockquote>
-
-                    <br class="clear">
-                    </dd>
-                </dl>
-            </div>
-
-
-
-            <div class="timeline-wrapper">
-                <h2 class="timeline-time"><span>29th March - Final Day Begin</span></h2>
-                <dl class="timeline-series">
-                    <span class="tick tick-before"></span>
-                    <dt id="3-1" class="timeline-event"><a>08:00 - Early Breakfast +</a></dt>
-                    <span class="tick tick-after"></span>
-                    <dd class="timeline-event-content" id="3-1EX">
-                        <div class="media">
-                            <img class="journey-img" src="img/index/journey-breakfast.jpg" />
-                        </div>
-
-                        <blockquote>
-                            <p>Last day of the event! Massive breakfast will be provided - fuel will be required for this intense and rewarding day!</p>
-                        </blockquote>
-
-                    <br class="clear">
-                    </dd>
-                </dl>
-
-                <dl class="timeline-series">
-                    <span class="tick tick-before"></span>
-                    <dt id="3-2" class="timeline-event"><a>10:30 - HackTrain to York!</a></dt>
-                    <span class="tick tick-after"></span>
-                    <dd class="timeline-event-content" id="3-2EX">
-                        <div class="media">
-                            <img class="journey-img" src="img/index/journey-trainhack.jpg" />
-                        </div>
-
-                        <blockquote>
-                            <p>TrainHackers will be getting ready for another journey to rock the finals of the HackTrain event! The finals and closing event will take place at the national York Train museum!</p>
-                        </blockquote>
-
-                    <br class="clear">
-                    </dd>
-                </dl>
-
-                <dl class="timeline-series">
-                    <span class="tick tick-before"></span>
-                    <dt id="3-2" class="timeline-event"><a>14:30 - Tech Check on Rails!</a></dt>
-                    <span class="tick tick-after"></span>
-                    <dd class="timeline-event-content" id="3-2EX">
-                        <div class="media">
-                            <img class="journey-img" src="img/index/journey-coworking2.jpg" />
-                        </div>
-
-                        <blockquote>
-                            <p>Tech check will begin! TrainHackers will be able to make sure that their technology works correctly, and their demos work as expected. This will be your chance to ensure a perfect final presentation!</p>
-                        </blockquote>
-
-                    <br class="clear">
-                    </dd>
-                </dl>
-
-                <dl class="timeline-series">
-                    <span class="tick tick-before"></span>
-                    <dt id="3-2" class="timeline-event"><a>16:00 - Final Presentations!</a></dt>
-                    <span class="tick tick-after"></span>
-                    <dd class="timeline-event-content" id="3-2EX">
-                        <div class="media">
-                            <img class="journey-img" src="img/index/journey-finals.jpg" />
-                        </div>
-
-                        <blockquote>
-                            <p>Final presentations will begin! TrainHackers will be showing the mind blowing startups they created throughout the intense journey.</p>
-                        </blockquote>
-
-                    <br class="clear">
-                    </dd>
-                </dl>
-
-                <dl class="timeline-series">
-                    <span class="tick tick-before"></span>
-                    <dt id="3-2" class="timeline-event"><a>17:30 - Judging and Announcements!</a></dt>
-                    <span class="tick tick-after"></span>
-                    <dd class="timeline-event-content" id="3-2EX">
-                        <div class="media">
-                            <img class="journey-img" src="img/index/journey-flights.jpg" />
-                        </div>
-
-                        <blockquote>
-                            <p>The winners of the 2014 HackTrain will be announced! Prizes will be given to the winning teams, as well as final announcements and closing words. After the announcements we'll all depart home, with an insane but rewarding experience.</p>
-                        </blockquote>
-
-                    <br class="clear">
-                    </dd>
-                </dl>
-                 <dl class="timeline-series">
-                    <span class="tick tick-before"></span>
-                    <dt id="3-2" class="timeline-event"><a>18:30 - HackTrain officially closes!</a></dt>
-                    <span class="tick tick-after"></span>
-                    <dd class="timeline-event-content" id="3-2EX">
-                        <div class="media">
-                            <img class="journey-img" src="img/index/journey-flights.jpg" />
-                        </div>
-
-                        <blockquote>
-                            <p>HackTrain 2015 wil come to a close!</p>
-                        </blockquote>
-
-                    <br class="clear">
-                    </dd>
-                </dl>
-
-            </div>
-
-            <button class="timeline-toggle">+ expand all</button>
-
-            <br class="clear">
-
-        </div>
-
-    </div>
-
-
     <section id="prizes" class="container content-section text-center">
         <div id="type-form-parent" class="row">
             <img width="100%" src="img/index/prizes.png" />
@@ -874,6 +527,21 @@
     </section>
 
     <br><br><br><br><br><br>
+
+    <section id="journey" class="container content-section text-center">
+        <div class="row">
+            <div class="col-lg-10 col-lg-offset-1">
+               <h1>THE 2015 JOURNEY</h1>
+                <div class="storify" style="width: 100%; margin: auto auto">
+                    <iframe frameborder="no" height="750" style="width: 100%; margin: auto auto" src="https://storify.com/public/templates/slideshow/index.html?src=//storify.com/njharland/inside-the-hacktrain#1"></iframe>
+
+                    <noscript>[<a href="//storify.com/njharland/inside-the-hacktrain" target="_blank">View the story "HackTrain: 40 hackers, 4 cities, 56
+                    hours to #HackTheRails " on Storify</a>]</noscript>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <!-- <div id="map"></div> -->
 
