adding winners section

--- a/index.html
+++ b/index.html
@@ -116,6 +116,9 @@
                         <a class="page-scroll" href="#prizes">Prizes</a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="#winner">2015 Winners</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#journey">2015 Journey</a>
                     </li>
                     <li>
@@ -392,7 +395,7 @@
     </section>
 
 
-    <section id="team" class="container-wide content-section text-center">
+    <!-- <section id="team" class="container-wide content-section text-center">
         <div class="row">
             <div class="col-sm-12">
                 <h2>Team</h2>
@@ -526,21 +529,51 @@
         </div>
     </section>
 
-    <br><br><br><br><br><br>
+    <br><br><br><br><br><br> -->
 
-    <section id="journey" class="container content-section text-center">
-        <div class="row">
-            <div class="col-lg-10 col-lg-offset-1">
-               <h1>THE 2015 JOURNEY</h1>
-                <div class="storify" style="width: 100%; margin: auto auto">
-                    <iframe frameborder="no" height="750" style="width: 100%; margin: auto auto" src="https://storify.com/public/templates/slideshow/index.html?src=//storify.com/njharland/inside-the-hacktrain#1"></iframe>
+    <!-- About Section -->
 
-                    <noscript>[<a href="//storify.com/njharland/inside-the-hacktrain" target="_blank">View the story "HackTrain: 40 hackers, 4 cities, 56
-                    hours to #HackTheRails " on Storify</a>]</noscript>
+    <section id="winners" class="container-wide content-section text-center">
+        <h2>2015 Winners</h2>
+        <div>
+            <div class="prize-header-container">
+                <div class="prize-header-img"></div>
+                <h1 class="prize-header-text">
+                    <a href="http://reroo.co">
+                        1st - Reroo
+                    </a>
+                </h1>
+            </div>  
+            <div class="row">
+                <div class="col-md-offset-1 col-md-5 prize-description">
+                    <p>
+                        Reroo is a slick, gorgeous iphone applicaiton that allows passengers to book cheaper train tickets by finding alternative routes.
+                    </p>
+                    <p>
+                        Not afraid to disrupt the railway market, Reroo aims to be the Skyscanner for trains with their smart graph algorithm that queries the Darwin API, and calculates the fastest route.
+                    </p>
+                    <p>
+                        Reroo was chosen as the champion of the 2015 HackTrain not only for the immense amount of work they managed to do in such a short and intesnse amount of time, but because they addressed a problem that clearly had a market, they had a growth plan, the skills and the drive to take this app to success.
+                    </p>
+                </div>
+                <div class="col-md-6">
+                    <iframe width="100%" height="500px" src="http://reroo.co.uk/"></iframe>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+    
+    <div class="clear"><div>
+
+    <section id="journey" class="container-wide content-section text-center">
+       <h2>THE 2015 JOURNEY</h2>
+        <div class="storify" style="width: 110%;">
+            <iframe frameborder="no" height="750" style="width: 100%;" src="https://storify.com/public/templates/slideshow/index.html?src=//storify.com/njharland/inside-the-hacktrain#1"></iframe>
+
+            <noscript>[<a href="//storify.com/njharland/inside-the-hacktrain" target="_blank">View the story "HackTrain: 40 hackers, 4 cities, 56
+            hours to #HackTheRails " on Storify</a>]</noscript>
+        </div>
+    </div>
 
 
     <!-- <div id="map"></div> -->
