--- a/index.html
+++ b/index.html
@@ -536,32 +536,28 @@
     <section id="winners" class="container-wide content-section text-center">
         <h2>2015 Winners</h2>
         <div>
-            <div class="prize-header-container">
+            <div class="prize-header-container col-md-4">
                 <div class="prize-header-img"></div>
-                <h1 class="prize-header-text">
-                    <a href="http://reroo.co">
-                        1st - Reroo
-                    </a>
-                </h1>
             </div>  
-            <div class="row">
-                <div class="col-md-offset-1 col-md-5 prize-description">
-                    <p>
-                        Reroo is a slick, gorgeous iphone applicaiton that allows passengers to book cheaper train tickets by finding alternative routes.
-                    </p>
-                    <p>
-                        Not afraid to disrupt the railway market, Reroo aims to be the Skyscanner for trains with their smart graph algorithm that queries the Darwin API, and calculates the fastest route.
-                    </p>
-                    <p>
-                        Reroo was chosen as the champion of the 2015 HackTrain not only for the immense amount of work they managed to do in such a short and intesnse amount of time, but because they addressed a problem that clearly had a market, they had a growth plan, the skills and the drive to take this app to success.
-                    </p>
-                </div>
-                <div class="col-md-6">
-                    <iframe width="100%" height="500px" src="http://reroo.co.uk/"></iframe>
-                </div>
+            <div class="col-md-4 prize-description">
+                <p>
+                    <h1 class="prize-header">
+                        <a href="http://reroo.co.uk">1st Place - Reroo</a>
+                    </h1>
+                </p>
+                <p>
+                    Not afraid to disrupt the railway market, Reroo aims to be the Skyscanner for trains with their smart graph algorithm that queries the Darwin API, and calculates the fastest route.
+                </p>
+                <p>
+                    Reroo was chosen as the champion of the 2015 HackTrain not only for the immense amount of work they managed to do in such a short and intesnse amount of time, but because they addressed a problem that clearly had a market, they had a growth plan, the skills and the drive to take this app to success.
+                </p>
+            </div>
+            <div class="col-md-4">
+                <iframe width="100%" height="500px" src="http://reroo.co.uk/"></iframe>
             </div>
         </div>
     </div>
+</section>
     
     <div class="clear"><div>
 
