--- a/index.html
+++ b/index.html
@@ -223,12 +223,12 @@
         <div style="padding-top:250px;" class="container col-lg-12">
             <h2>Golden Sponsors</h2>
             <div class="container col-sm-12 col-md-8 col-md-offset-2">
-                <div class="col-sm-6 img-container">
+                <div class="col-xs-6 img-container">
                     <a  style="width: 100%;" href="http://www.accenture.com/">
                         <img style="width: 100%; margin: auto auto;" src="img/index/accenture.png"/>
                     </a>
                 </div>
-                <div class="col-sm-6 img-container">
+                <div class="col-xs-6 img-container">
                     <a  style="width: 100%;" href="http://www.thetrainline.co.uk/">
                         <img style="width: 100%; margin: auto auto;" src="img/index/logo-ttl.png"/>
                     </a>
@@ -236,22 +236,22 @@
               </div>
             <h2 style="margin-top: 300px">Silver Sponsors</h2>
             <div class="container col-sm-12">
-                <div class="col-sm-3 img-container">
+                <div class="col-xs-3 img-container">
                     <a  style="width: 100%;" href="http://www.nationalrailmuseum.co.uk/">
                         <img style="width: 50%;" src="img/index/nrmwhite.png"/>
                     </a>
                 </div>
-                <div class="col-sm-3 img-container">
+                <div class="col-xs-3 img-container">
                     <a  style="width: 100%;" href="http://www.networkrail.co.uk/">
                         <img style="width: 100%;" src="img/index/logo-networkrail.png"/>
                     </a>
                 </div>
-                <div class="col-sm-3 img-container">
+                <div class="col-xs-3 img-container">
                     <a  style="width: 100%;" href="http://www.nationalrail.co.uk/">
                         <img style="width: 100%;" src="img/index/logo-nre.png"/>
                     </a>
                 </div>
-                <div class="col-sm-3 img-container">
+                <div class="col-xs-3 img-container">
                     <a  style="width: 100%;" href="http://nomad-digital.com/">
                         <img style="width: 100%;" src="img/index/logo-nomad.png"/>
                     </a>
@@ -261,12 +261,12 @@
         <div style="padding-top:200px;" class="container col-lg-8 col-lg-offset-2">
             <h2>Transport Sponsors</h2>
             <div class="container col-sm-12">
-                <div class="col-sm-6 img-container">
+                <div class="col-xs-6 img-container">
                     <a  style="width: 100%;" href="http://www.eastmidlandstrains.co.uk/">
                         <img style="width: 100%;" src="img/index/logo-emt.png"/>
                     </a>
                 </div>
-                <div class="col-sm-6 img-container">
+                <div class="col-xs-6 img-container">
                     <a  style="width: 100%;" href="http://www.virgintrainseastcoast.com/">
                         <img style="width: 70%;" src="img/index/logo-VTEC.png"/>
                     </a>
@@ -288,31 +288,38 @@
         <div class="row">
           <div class="col-md-6">
               <h2>Partners</h2>
-              <div class="container col-sm-6">
+              <div class="container col-xs-4">
                   <div class="col-sm-12 img-container">
                       <a  style="width: 80%;" href="http://github.com/plans">
                           <img style="width: 80%;" src="img/index/github-logo.png"/>
                       </a>
                   </div>
               </div>
-              <div class="container col-sm-6">
+              <div class="container col-xs-4">
                   <div class="col-sm-12 img-container">
                       <a  style="width: 40%;" href="http://bynifty.com/">
                           <img style="width: 40%;" src="img/index/logo-nifty.png"/>
                       </a>
                   </div>
               </div>
-              <div class="container col-sm-6">
+              <div class="container col-xs-4">
                   <div class="col-sm-12 img-container">
                       <a  style="width: 100%;" href="http://www.meetup.com/UK-Hackathons-and-Jams/">
                           <img style="width: 100%;" src="img/index/hackathonsandjams-logo.png"/>
                       </a>
                   </div>
               </div>
-              <div class="container col-sm-6">
+              <div class="container col-xs-4">
                   <div class="col-sm-12 img-container">
                       <a  style="width: 100%;" href="http://clarity.pr/">
                           <img style="width: 100%;" src="img/index/logo-clarity.png"/>
+                      </a>
+                  </div>
+              </div>
+              <div class="container col-xs-4">
+                  <div class="col-sm-12 img-container">
+                      <a  style="width: 100%;" href="http://clarity.pr/">
+                          <img style="width: 100%;" src="img/index/logo-green.png"/>
                       </a>
                   </div>
               </div>
@@ -534,27 +541,76 @@
     <!-- About Section -->
 
     <section id="winners" class="container-wide content-section text-center">
-        <h2>2015 Winners</h2>
-        <div>
-            <div class="prize-header-container col-md-4">
-                <div class="prize-header-img"></div>
-            </div>  
-            <div class="col-md-4 prize-description">
+        <div class="prize-header-container">
+            <div class="prize-header-img" style=""></div>
+            <h1>
+                <div class="prize-header-text">
+                    Winners 2015
+                </div>
+            </h1>
+        </div> 
+
+        <div> 
+            <div class="col-md-6 prize-description" style="padding-top: 50px">
+                <h1 class="prize-title">
+                    <a href="http://reroo.co.uk">
+                        1st Place - Reroo
+                    </a>
+                </h1>
                 <p>
-                    <h1 class="prize-header">
-                        <a href="http://reroo.co.uk">1st Place - Reroo</a>
-                    </h1>
+                    Reroo is a slick, gorgeous iphone applicaiton that allows passengers to book cheaper train tickets by finding alternative routes.
                 </p>
                 <p>
-                    Not afraid to disrupt the railway market, Reroo aims to be the Skyscanner for trains with their smart graph algorithm that queries the Darwin API, and calculates the fastest route.
+                    Not afraid to disrupt the railway market, <a href="http://reroo.co.uk">Reroo</a> aims to be the "Skyscanner" for trains with their smart graph algorithm that queries the Darwin API, and calculates the fastest route.
                 </p>
                 <p>
                     Reroo was chosen as the champion of the 2015 HackTrain not only for the immense amount of work they managed to do in such a short and intesnse amount of time, but because they addressed a problem that clearly had a market, they had a growth plan, the skills and the drive to take this app to success.
                 </p>
             </div>
-            <div class="col-md-4">
-                <iframe width="100%" height="500px" src="http://reroo.co.uk/"></iframe>
+            <div class="col-md-6 prize-img" style="background-image: url(img/2015/hacktrain-2015-1st.jpg); height: 500px;">
             </div>
+        </div>
+        <div style="clear: both;"></div>
+        <div>
+            <div class="col-md-6 prize-img" style="background-image: url(img/2015/hacktrain-2015-2nd.jpg); height: 500px;">
+            </div>
+            <div class="col-md-6 prize-description" style="padding-top: 50px">
+                <h1 class="prize-title">
+                    <a href="http://elasticapp.uk">
+                        2nd Place - Elastic
+                    </a>
+                </h1>
+                <p>
+                    Elastic is an iphone app with a beautiful, intuitive user interface that allows passengers to transfer from a platform to another.
+                </p>
+                <p>
+                    After discovering that this problem has been tried in the past with failures resulting in losses of large quantities of dollars, they addressed this problem in the most brilliant way possible.
+                </p>
+                <p>
+                    The elastic team was certainly worthy of the HackTrain hall of fame, after amazing the crowd with their intuitive application, which they manage to hack up in less than 48 hours!
+            </div>
+        </div>
+
+        <div style="clear: both;"></div>
+        <div>
+            <div class="col-md-6 prize-description" style="padding-top: 50px">
+                <h1 class="prize-title">
+                    <a href="http://reroo.co">
+                        3rd Place - Captivate
+                    </a>
+                </h1>
+                <p>
+                    The Captivate team aims to bring web portals to make your train journey more entretaining and enjoyable.
+                </p>
+                <p> 
+                    Similar to the entretainment portals you would find on the interactive TV in the back of the seats in a plane during long flights, Captivate brings you movies, tv shows, applications and games. 
+                </p>
+                <p>
+                    This team was selected due to the massive progress they made during the weekend. Not only they had a working MVP, but they had secured a trial with a train partner to test in a real journey!
+                </p>
+            </div>
+        </div>
+        <div class="col-md-6 prize-img" style="background-image: url(img/2015/hacktrain-2015-3rd.png); height: 500px;">
         </div>
     </div>
 </section>
