--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
 
     <!-- About Section -->
 
-    <section id="winners" class="container-wide content-section text-center">
+    <div id="winners" class="container-wide content-section text-center" style="padding-top: 0px">
         <div class="prize-header-container">
             <div class="prize-header-img" style=""></div>
             <h1>
@@ -551,7 +551,8 @@
         </div> 
 
         <div> 
-            <div class="col-md-6 prize-description" style="padding-top: 50px">
+            <div class="col-md-6 prize-description">
+                <br><br>
                 <h1 class="prize-title">
                     <a href="http://reroo.co.uk">
                         1st Place - Reroo
@@ -613,7 +614,7 @@
         <div class="col-md-6 prize-img" style="background-image: url(img/2015/hacktrain-2015-3rd.png); height: 500px;">
         </div>
     </div>
-</section>
+</div>
 
     <section id="journey" class="container-wide content-section text-center">
         <div class="storify" style="width: 110%;">
